tests/NormalTests/paczka1/fuzzy1/24358522.err
Error in line 6: xAqPPpgxkOM A994 58,8
Error in line 7: xAqPPpgxkOM S229 68,2
Error in line 9: xAqPPpgxkOM A994 58,7
Error in line 10: xAqPPpgxkOM S549 62,5
Error in line 12: BwU A994 89,6
Error in line 20: xAqPPpgxkOM S549 94,4
Error in line 22: B3G A579 78,5
Error in line 36: A579 S549 77,8
